--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-  <script type="importmap">
+  <!-- <script type="importmap">
 {
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
@@ -17,7 +17,7 @@
     "react": "https://aistudiocdn.com/react@^19.2.0"
   }
 }
-</script>
+</script> -->
     <style>
       body {
         font-family: 'Orbitron', sans-serif;
